--- a/eladmin-system/src/main/resources/config/application-dev.yml
+++ b/eladmin-system/src/main/resources/config/application-dev.yml
@@ -4,7 +4,7 @@ spring:
     druid:
       db-type: com.alibaba.druid.pool.DruidDataSource
       driverClassName: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-      url: jdbc:log4jdbc:mysql://localhost:3306/eladmin?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false
+      url: jdbc:log4jdbc:mysql://192.168.0.72:33306/eladmin?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false
       username: root
       password: 123456
       # 初始连接数
@@ -111,3 +111,9 @@ file:
   # 文件大小 /M
   maxSize: 100
   avatarMaxSize: 5
+  # 文件服务器的查看地址
+fastdfs:
+  url: 192.168.0.72:8888
+  ip: 192.168.0.72
+  port: 22122
+fastdfsurl: 192.168.0.72:8888
